# FirstCMake1

./: .gitignore  .gitmodules  CMakeLists.txt  SumArray.hpp  main.cpp
SaySomething/: CMakeLists.txt  eigenTest.cpp  sayprogr.cpp
SomeFunctions/: CMakeLists.txt  SumArray.h  main.cpp
Tests/: CMakeLists.txt  mainTest.cpp
